syntax = "proto3";

package cheers.friendship.v1;


import "google/api/annotations.proto";
import "cheers/type/user/user.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/friendship/v1;friendship";

service FriendshipService {
  /*
    Add a new friend
   */
  rpc CreateFriendRequest(CreateFriendRequestRequest) returns (CreateFriendRequestResponse) {
    option (google.api.http) = {
      post: "/v1/friendships"
      body: "*"
    };
  }

  /*
    Get friend list of a specific user
   */
  rpc ListFriend(ListFriendRequest) returns (ListFriendResponse) {
    option (google.api.http) = {
      get: "/v1/friendships"
    };
  }

  /*
    Get friend requests list of a specific user
   */
  rpc ListFriendRequests(ListFriendRequestsRequest) returns (ListFriendRequestsResponse) {
    option (google.api.http) = {
      get: "/v1/friendships/pending"
    };
  }

  /*
    Delete a friend
   */
  rpc DeleteFriend(DeleteFriendRequest) returns (DeleteFriendResponse) {
    option (google.api.http) = {
      delete: "/v1/friendships"
    };
  }
}

message DeleteFriendRequest {
  string post_id = 1;
  string friendship_id = 2;
}

message DeleteFriendResponse {
}

message ListFriendRequest {
  string post_id = 1;
}

message ListFriendResponse {
  repeated FriendshipItem items = 1;
}

message ListFriendRequestsRequest {
  string post_id = 1;
}

message ListFriendRequestsResponse {
  repeated cheers.type.UserItem items = 1;
}

message FriendshipItem {
  Friendship friendship = 1;
  cheers.type.UserItem user_item = 2;
}

message Friendship {
  string id = 1;
  string text = 2;
  int64 create_time = 5;
  string user_id = 3;
  string post_id = 4;
}

message CreateFriendRequestRequest {
  string user_id = 1;
}

message CreateFriendRequestResponse {
}
